# LiveMonitor

./: .gitignore  CHANGELOG.md  LICENSE  README.md  convert-icon.js  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  settings.css  settings.html  settings.js  style.css  tauri-polyfill.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
ui/: index.html  renderer.js  settings.css  settings.html  settings.js  style.css  tauri-polyfill.js
